[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ui/bar/hp_bar.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/deadscreen/deadscreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/list-weapon/list_weapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/deadscreen/deadscreen.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/bar/hp_bar.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/list-weapon/list_weapon.gd" type="Script" id=6]
[ext_resource path="res://assets/ui/bar/bar_empty.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/bar/bar.png" type="Texture" id=8]
[ext_resource path="res://map/multi-player/ui/ui.gd" type="Script" id=9]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control2" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deadscreen" type="Control" parent="CanvasLayer/Control2" instance=ExtResource( 2 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="HBoxContainer" parent="CanvasLayer/Control2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="Control" parent="CanvasLayer/Control2/Control"]
margin_right = 338.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="mid" type="Control" parent="CanvasLayer/Control2/Control"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control2/Control/mid" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -169.5
margin_top = -174.0
margin_right = 169.5
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp_bar" type="TextureProgress" parent="CanvasLayer/Control2/Control/mid" instance=ExtResource( 1 )]
margin_right = 500.0
margin_bottom = 30.0
max_value = 1000.0
value = 1000.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 8 )
tint_progress = Color( 0.14902, 1, 0, 1 )
nine_patch_stretch = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right" type="Control" parent="CanvasLayer/Control2/Control"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="aim" type="Button" parent="CanvasLayer/Control2/Control/right"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -155.0
margin_top = -85.0
margin_right = -16.0
margin_bottom = -27.0
size_flags_vertical = 3
text = "Aim"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Control2/Control/right/aim" to="." method="_on_aim_pressed"]
